--- a/LlamaServerClientSharp.csproj
+++ b/LlamaServerClientSharp.csproj
@@ -1,11 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Version>0.0.1.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="src\Program.cs" />
+    <Compile Remove="src\Program.cs" />
+    <None Remove="src\Program.cs" />
+  </ItemGroup>
 
 </Project>
